--- a/notebooks/UMAP_FER.ipynb
+++ b/notebooks/UMAP_FER.ipynb
@@ -26,9 +26,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/george-vengrovski/Documents/projects/tweety_bert_paper/files/llb3_train'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/george-vengrovski/Documents/projects/tweety_bert_paper/notebooks/UMAP_FER.ipynb Cell 2\u001b[0m line \u001b[0;36m7\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/george-vengrovski/Documents/projects/tweety_bert_paper/notebooks/UMAP_FER.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m train_dir \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m/home/george-vengrovski/Documents/projects/tweety_bert_paper/files/llb3_train\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/george-vengrovski/Documents/projects/tweety_bert_paper/notebooks/UMAP_FER.ipynb#W1sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m test_dir \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m/home/george-vengrovski/Documents/projects/tweety_bert_paper/files/llb3_test\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/george-vengrovski/Documents/projects/tweety_bert_paper/notebooks/UMAP_FER.ipynb#W1sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m train_dataset \u001b[39m=\u001b[39m SongDataSet_Image(train_dir, num_classes\u001b[39m=\u001b[39m\u001b[39m21\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/george-vengrovski/Documents/projects/tweety_bert_paper/notebooks/UMAP_FER.ipynb#W1sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m test_dataset \u001b[39m=\u001b[39m SongDataSet_Image(test_dir, num_classes\u001b[39m=\u001b[39m\u001b[39m21\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/george-vengrovski/Documents/projects/tweety_bert_paper/notebooks/UMAP_FER.ipynb#W1sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m collate_fn \u001b[39m=\u001b[39m CollateFunction(segment_length\u001b[39m=\u001b[39m\u001b[39m1000\u001b[39m)  \u001b[39m# Adjust the segment length if needed\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/projects/tweety_bert_paper/src/data_class.py:13\u001b[0m, in \u001b[0;36mSongDataSet_Image.__init__\u001b[0;34m(self, file_dir, num_classes)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, file_dir, num_classes\u001b[39m=\u001b[39m\u001b[39m40\u001b[39m):\n\u001b[0;32m---> 13\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfile_paths \u001b[39m=\u001b[39m [os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(file_dir, file) \u001b[39mfor\u001b[39;00m file \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39mlistdir(file_dir)]\n\u001b[1;32m     14\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_classes \u001b[39m=\u001b[39m num_classes\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/george-vengrovski/Documents/projects/tweety_bert_paper/files/llb3_train'"
+     ]
+    }
+   ],
    "source": [
     "from torch.utils.data import DataLoader\n",
     "from data_class import SongDataSet_Image, CollateFunction\n",
@@ -272,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.1.0"
   },
   "orig_nbformat": 4
  },
